Wed Mar  4 00:44:56 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (rb_thread_io_blocking_region): assigned variables
	  inside EXEC_TAG() should be volatile.

	* thread.c (rb_thread_s_handle_interrupt): ditto.

	* thread.c (exec_recursive): ditto.

Wed Mar  4 00:29:18 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* tool/redmine-backporter.rb: now can specify shorten form of commands.

Tue Mar  3 23:41:42 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* tool/redmine-backporter.rb (Readline.readline): drop untreated control
	  characters.

Tue Mar  3 22:25:24 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/lib/envutil.rb (EnvUtil.invoke_ruby): need to rescue because
	  Signal.signame may raise exception.

Tue Mar  3 16:57:39 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* tool/redmine-backporter.rb: use 'b' instead of 's' for showing
	  Backport options for merger.rb.

Tue Mar  3 16:55:23 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* tool/redmine-backporter.rb: show selected ticket number at prompt.

Tue Mar  3 14:47:30 2015  Kazuki Tanaka  <gogotanaka@ruby-lang.org>

	* math.c (num2dbl_with_to_f): direct casting from Rational to double.
	  [Feature #10909]

	* test/ruby/test_math.rb: add tests for the above change.

Tue Mar  3 07:52:20 2015  Rei Odaira  <Rei.Odaira@gmail.com>

	* test/ruby/test_symbol.rb: avoid a false positive in AIX.

Tue Mar  3 00:59:39 2015  Naohisa Goto  <ngotogenome@gmail.com>

	* configure.in: set PRELOADENV in Solaris to avoid "wrong ELF class"
	  error. [Bug #10926] [ruby-dev:48888]
	* configure.in: set LIBPATHENV for 32-bit compile in Solaris
	  in addition to 64-bit.

Mon Mar  2 15:36:10 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: do not check _setjmp unless _longjmp is available,
	  so that configure results will not be changed by cache.

Mon Mar  2 14:44:56 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_REPLACE_TYPE): restore unsigned type from